Fix test case